--- a/css/style.css
+++ b/css/style.css
@@ -4,8 +4,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Staatliches&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Dela+Gothic+One&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Inconsolata:wght@900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Amatic+SC&family=Playfair+Display+SC&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Acme&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@400&display=swap');
 .izquierda {
     background: url(../img/1.jpg);
     background-size: cover;
@@ -413,12 +413,18 @@
     --left: 40%;
     --hover-transform: translateY(-8px);
     --hover-transition: all 0.6s ease;
+    --mayus: uppercase;
 }
 
 .header-layout {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(50%, 1fr));
     background-color: rgb(56, 175, 185);
+}
+
+.header-layout .container-fluid .navbar-brand img {
+    width: 30px;
+    height: 24px;
 }
 
 .header-layout .navbar {
@@ -511,7 +517,7 @@
 }
 
 .challenge-4 .item:nth-child(5) h2 {
-    margin-left: 60%;
+    margin-left: 65%;
 }
 
 .challenge-4 .item:nth-child(6) {
@@ -560,8 +566,8 @@
 }
 
 .challenge-4-inters {
-    margin-top: var(--margin);
     display: grid;
+    margin-top: var(--margin);
     grid-template-columns: repeat(auto-fill, minmax(33%, 1fr));
     background-color: var(--negro);
     margin-bottom: var(--margin);
@@ -573,19 +579,47 @@
 }
 
 .challenge-4-inters .item:nth-child(1) p {
-    margin-left: 12%;
     margin-top: 15%;
     font-size: 24px;
     font-family: 'Source Code Pro', monospace;
 }
 
 .challenge-4-inters .item:nth-child(1) button {
-    margin-left: 25%;
+    margin-left: 12%;
     margin-bottom: 15%;
     width: 60%;
     font-family: 'Source Code Pro', monospace;
-    text-transform: uppercase;
+    text-transform: var(--mayus);
     border: 2px solid;
+}
+
+.challenge-4-exito {
+    display: grid;
+    grid-column: repeat(auto-fill, minmax(50%, 1fr));
+    gap: 2vw;
+    margin-bottom: var(--margin);
+}
+
+.challenge-4-exito .item:nth-child(2) {
+    grid-column: 2/2;
+}
+
+.challenge-4-exito .item:nth-child(2) h1 {
+    font-size: 3rem;
+    font-family: 'Staatliches', cursive;
+}
+
+.challenge-4-exito .item:nth-child(3) {
+    grid-column: span 2;
+    margin-top: var(--margin);
+}
+
+.challenge-4-exito .item:nth-child(3) p {
+    font-size: 40px;
+    text-transform: var(--aling);
+    font-family: 'Amatic SC', cursive;
+    font-family: 'Playfair Display SC', serif;
+    letter-spacing: 10px;
 }
 
 .Challenge-4-Footer {
@@ -666,7 +700,7 @@
 }
 
 .Challenge-4-Footer .item:nth-child(4) p {
-    text-transform: uppercase;
+    text-transform: var(--mayus);
     margin-top: 1%;
 }
 
@@ -741,6 +775,9 @@
         grid-column: 1/2;
         grid-row: 14/14;
     }
+    .services i {
+        margin-left: 40%;
+    }
     .Challenge-4-Footer .item:nth-child(1) {
         grid-column: 1/2;
         grid-row: 1/1;
@@ -770,7 +807,30 @@
     .challenge-4-inters .item:nth-child(1) {
         grid-column: 1/3;
     }
+    .challenge-4-inters .item:nth-child(1) p {
+        margin-left: 30%;
+    }
     .challenge-4-inters .item:nth-child(1) button {
-        margin-left: 12%;
+        margin-left: 30%;
+    }
+    .challenge-4-exito .item:nth-child(1) iframe {
+        width: 100%;
+    }
+    .challenge-4-exito .item:nth-child(2) {
+        grid-column: 1/1;
+    }
+    .challenge-4-exito .item:nth-child(3) {
+        grid-column: 1/1;
+    }
+    .challenge-4-exito .item:nth-child(3) p {
+        font-size: 12px;
+        letter-spacing: 0px;
+    }
+}
+
+@media screen and (min-width: 768px) and (max-width:991px) {
+    .challenge-4-exito .item:nth-child(2) {
+        grid-column: 1/1;
+        grid-row: 2/2;
     }
 }
