--- a/css/style.css
+++ b/css/style.css
@@ -834,3 +834,227 @@
         grid-row: 2/2;
     }
 }
+
+
+/* Login */
+
+section {
+    position: relative;
+    width: 100%;
+    height: 100vh;
+    display: flex;
+}
+
+section .img-left {
+    position: relative;
+    width: 50%;
+    height: 100%;
+    display: none;
+}
+
+section .img-left img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+section .txt-banner {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: rgba(20, 99, 189, 0.9);
+}
+
+section .img-left p {
+    padding: 10%;
+    margin-top: 18%;
+    color: var(--blanco);
+    width: 90%;
+}
+
+header.nav-login {
+    display: flex;
+    padding: 5%;
+    justify-content: space-between;
+}
+
+header.nav-login span {
+    font-size: 12px;
+    width: 30%;
+}
+
+header.nav-login p {
+    margin-top: 1%;
+    font-size: 12px;
+}
+
+header.nav-login a {
+    text-decoration: none;
+}
+
+section .login .item:nth-child(2) {
+    padding: 3%;
+    margin: 2%;
+    border-radius: 15px;
+    box-shadow: 10px 10px 20px -1px rgba(0, 0, 0, 0.58);
+}
+
+.login .card {
+    margin-bottom: 3%;
+}
+
+section .login .item:nth-child(1) {
+    display: flex;
+    padding: 2%;
+    justify-content: space-between;
+}
+
+section .login .item:nth-child(1) a {
+    text-decoration: none;
+}
+
+.login .item:nth-child(1) .back {
+    color: var(--negro);
+}
+
+section .target .user {
+    font-size: 40px;
+    margin-left: 15px;
+    margin-top: 13px;
+    border-radius: 30px;
+}
+
+section .target .arrow {
+    font-size: 30px;
+    margin-top: 20px;
+    margin-left: -10px;
+}
+
+.arrow:hover,
+.arrow:focus,
+.arrow:active {
+    animation-name: arrow;
+    animation-duration: 1s;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
+}
+
+section .target b {
+    margin-left: 10%;
+}
+
+section .target p {
+    margin-left: 10%;
+}
+
+section .card:hover {
+    border: 1px solid rgba(20, 99, 189);
+    cursor: pointer;
+}
+
+section .target .user:hover {
+    background-color: rgba(20, 99, 189);
+}
+
+.form-registrer span {
+    color: #FD1D1D;
+}
+
+.bv2 {
+    margin-top: 3%;
+}
+
+.security {
+    margin-left: 20%;
+}
+
+.back-mobile {
+    margin-top: 3%;
+}
+
+.back-mobile a {
+    text-decoration: none;
+    color: var(--negro);
+    padding: 4%;
+}
+
+@media screen and (min-width: 768px) {
+    header.nav-login {
+        display: none;
+    }
+    .back-mobile {
+        display: none;
+    }
+    section .img-left {
+        display: flex;
+    }
+    section .login {
+        display: grid;
+        grid-template-columns: repeat(auto-fill, minmax(100%, 1fr));
+        grid-template-rows: repeat(2, 100px);
+        margin-right: 3%;
+    }
+    .login .item .card {
+        width: 25rem;
+    }
+    section .login .item .Txt-w {
+        width: 60%;
+        text-align: justify;
+    }
+    section .target .user {
+        margin-top: 30%;
+        margin-left: 50%;
+    }
+    section .login .item:nth-child(2) {
+        padding: 0%;
+        margin-right: 2%;
+        box-shadow: 0px 0px 0px 0px;
+        margin-left: 10%;
+    }
+    .security {
+        margin-left: 32%;
+    }
+}
+
+@media screen and (min-width: 500px) and (max-width: 767px) {
+    section .target .arrow {
+        margin-top: 15px;
+    }
+    section .target .user {
+        margin-top: 10%;
+        margin-left: 50%;
+    }
+    section .login {
+        padding: 0%;
+        margin-left: 10%;
+        margin-top: -5%;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    section .login .item:nth-child(1) {
+        display: none;
+        justify-content: space-between;
+    }
+}
+
+@-webkit-keyframes arrow {
+    25% {
+        transform: scale(1.1);
+    }
+    75% {
+        transform: scale(0.9);
+    }
+}
+
+@keyframes arrow {
+    25% {
+        transform: scale(1.1);
+    }
+    75% {
+        transform: scale(0.9);
+    }
+}
